fix overflow for pin img in message

--- a/src/styles/chat/ChatMessage.css
+++ b/src/styles/chat/ChatMessage.css
@@ -66,3 +66,9 @@
 
   color: var(--text-smoke);
 }
+.message-file {
+  width: 300px;
+}
+.message-file > img {
+  width: 100%;
+}
